// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toMatchLeft() fails when regular expression matches a string on the left 1`] = `
"expect(received).not.toMatchLeft(expectedLeft)

Expected Either not to match left:
  /a/

Received left:
  "aa""
`;

exports[`.not.toMatchLeft() fails when spec deeply matches the object on the left 1`] = `
"expect(received).not.toMatchLeft(expectedLeft)

Expected Either not to match left:
  {"b": {"c": 2}}

Received left:
  {"a": 1, "b": {"c": 2, "d": 3}}"
`;

exports[`.not.toMatchLeft() fails when spec matches the object on the left 1`] = `
"expect(received).not.toMatchLeft(expectedLeft)

Expected Either not to match left:
  {"a": 1}

Received left:
  {"a": 1}"
`;

exports[`.toMatchLeft() fails when object is a right 1`] = `
"expect(received).toMatchLeft(expectedLeft)

Expected Either to match left:
  {"a": 1}

Received right."
`;

exports[`.toMatchLeft() fails when regular expression does not match a string on the left 1`] = `
"expect(received).toMatchLeft(expectedLeft)

Expected Either to match left:
  /b/

Received left:
  "aa""
`;

exports[`.toMatchLeft() fails when spec does not match the object on the left 1`] = `
"expect(received).toMatchLeft(expectedLeft)

Expected Either to match left:
  {"a": 2}

Received left:
  {"a": 1, "b": 2}"
`;
